--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -237,7 +237,7 @@ Bangladesh) were recruited through online announcements posted on Twitter, Faceb
 \end{figure*}
 
 
-\subsubsection{Development Environment}
+\subsubsection{Pilot Studies}
 
 We conducted two pilot studies to evaluate and understand an effective process for performing this study. The first pilot study involved four participants that were invited to join the first author in-person or over video conferencing. The study involved tasks using two APIs, the WordPress REST API V2 and the GMail REST API. Each participant was given one of the two APIs and a set of tasks and online answer forms to complete using the API within an hour. The primary findings from this pilot are as follows: 1) participants required significant overhead time to setup a development environment with the proper API credentials, 2) the intermediate trial attempts of using the API are potentially more valuable than the final answer as it allows us to study what obstacles the participants face, 3) the number of tasks for the study had to be reduced to fit within the one hour limit, and 4) for GMail API, participants used up a large portion of their time on learning about how to use  OAuth.
 
@@ -253,7 +253,7 @@ To overcome the shortcomings found from the first pilot study, we decided to dev
 
 \subsubsection{Protocol}
 
-We designed the actual study protocol as follows: we enhanced the original WordPress REST API documentation and added a total of 3 API usage examples to show listing of blog posts with query parameters for filtering, a request to create a blog post and a request to update a blog post. We used the WordPress API unit tests to find relevant data for these examples. Figure \ref{fig:original} shows a screenshot of the original API documentation related to T4 where the API client developers are provided with a reference table describing the different properties that can be used to create a $Post$ object\footnote{\url{http://v2.wp-api.org/reference/posts/}}. Figure \ref{fig:enhanced} shows a screenshot of the enhanced API documentation with a cURL based usage example. cURL is used because it's used by elsewhere in the original API documentation. In the enhanced API documentation, the example shows one possible API call with realistic values for the data that is described in the reference table and associated API response headers and body.
+Learning from the pilot studies, we designed the actual study protocol as follows: we enhanced the original WordPress REST API documentation and added a total of 3 API usage examples to show listing of blog posts with query parameters for filtering, a request to create a blog post and a request to update a blog post. We used the WordPress API unit tests to find relevant data for these examples. Figure \ref{fig:original} shows a screenshot of the original API documentation related to T4 where the API client developers are provided with a reference table describing the different properties that can be used to create a $Post$ object\footnote{\url{http://v2.wp-api.org/reference/posts/}}. Figure \ref{fig:enhanced} shows a screenshot of the enhanced API documentation with a cURL based usage example. cURL is used because it's used by elsewhere in the original API documentation. In the enhanced API documentation, the example shows one possible API call with realistic values for the data that is described in the reference table and associated API response headers and body.
 
 We divided the participants into two groups, G1 and G2. G1 participants were provided with a link to the official API documentation on the web-based API explorer, and G2 participants were provided with a link to the enhanced API documentation with usage examples. The web-based API explorer allocated more participants to G1 compared to G2 because we wanted to better understand the impact of the lack of usage examples on API client developer productivity. However, each individual participant was randomly assigned to a group by the web-based API explorer. All participants were given the same set of API tasks and were requested to limit their participation time to a maximum of one hour. No task specific time limit was imposed except an overall limit one hour for the entire study because we wanted participants to spend sufficient time on each task without forcing them to move the next one. Participants were allowed to access the internet and external resources alongside the provided API documentation to perform the tasks as they would normally use on a typical work day. We used the web-based API explorer to also collect an experience rating on a scale of 0-10, 10 being the best possible, of using the given REST API documentation and a free-form feedback from each participant as an exit survey.
 
@@ -269,7 +269,7 @@ The data collected by the web-based REST API explorer for each participant is ex
 
 \centering
 
-\begin{subfigure}{0.5\textwidth}
+\begin{subfigure}[b]{0.5\textwidth}
 \centering
 \begin{tikzpicture}
     \begin{axis}[
@@ -278,7 +278,7 @@ The data collected by the web-based REST API explorer for each participant is ex
         xticklabels from table={\groupone}{Task},
         legend style={at={(0.5,-0.15)},
         anchor=north,legend columns=-1},
-        ylabel=Average Trial API Calls,
+        ylabel=Average Trial API Calls (Frequency),
         width=2.8in
     ]
     \addplot[pattern=crosshatch dots, pattern color=gray] table [col sep=comma, x expr=\coordindex, y=AverageAPICalls] {groupone.csv};
@@ -306,7 +306,7 @@ The data collected by the web-based REST API explorer for each participant is ex
 \caption{Trial vs. Successful API Calls}
 \label{graph:productivity}
 \end{subfigure}
-\begin{subfigure}{0.4\textwidth}
+\begin{subfigure}[b]{0.4\textwidth}
 \centering
 \begin{tikzpicture}
     \begin{axis}[
@@ -337,14 +337,14 @@ The data collected by the web-based REST API explorer for each participant is ex
 \subsubsection{Data Analysis}
 We analyzed the data artifact qualitatively to understand the obstacles that REST API client developers face when using an API documentation that lacks usage examples. We exported a table of data from the database behind web-based REST API explorer. For each row, the table contains the following columns: API task, participant identifier, timestamp, API trial number, I1-4, response headers and body. It allowed us to observe and categorize the different input values that the participants used to perform the given API tasks. The values for I1-4 used by the participants were manually coded to group the participant responses into categories. The categories help us determine the types of information that API client developers need in the API documentation to perform API tasks successfully. The analysis started with an empty set of codes and new codes were introduced to describe scenarios that did not fall under  codes that were already applied. The first author applied the codes on the raw data artifact and the co-authors verified the codes randomly. To resolve disagreements, the authors discussed and updated the codes accordingly. The codes were then further categorized to higher level grouping to represent common problems faced by the study participants for each group.
 
-For each API task attempted by each participant, we annotated the artifact with one of the following labels: successful, partially successful, and unsuccessful. Task participations are marked successful when I1-4 matches the required values for performing the given task. If a participant is able to use the correct I1-4 for one of the two tasks required to complete a single task (T2), we marked it as a partially successful. Otherwise, it's marked as unsuccessful. Based on these annotations, the answers for RQ was computed using the following:
+For each API task attempted by each participant, we annotated the artifact with one of the following labels: successful, partially successful, and unsuccessful. Task participations are marked successful when I1-4 matches the required values for performing the given task. If a participant is able to use the correct I1-4 for one of the two tasks required to complete a single task (T2), we marked it as a partially successful. Otherwise, it's marked as unsuccessful. Based on these annotations, the following formulas were used to compute the quantitative results:
 
 
-success rate of group = (total number of successful tasks by group) / (number of participants in group * number of API tasks)
+Success Rate = (total number of successful tasks by group) / (number of participants in group * number of API tasks)
 
-API calls per success of group = (number of API calls annotated as successful) / (total number of trial API calls made by group)
+Average Trial API Calls = (number of API calls annotated as successful) / (total number of trial API calls made by group)
 
-average time taken for success = (number of successful API tasks by group) / (total time spent by all participants in the group)
+Average Time Spent = (number of successful API tasks by group) / (total time spent by all participants in the group)
 
 
 \section{Results}
@@ -355,10 +355,6 @@ average time taken for success = (number of successful API tasks by group) / (to
 
 
 We present a summary of the quantitative results as found by analyzing a total of 539 API calls (385 from G1, 152 from G2) made by the participants from this study in Figure \ref{fig:comparison}. Figure \ref{graph:productivity} juxtaposes the average number of trial API calls made by each group against their rate of success in performing the given tasks T2-T6. The average number of trial API calls and success rate for each group is computed using the following formulas:
-
-AverageTrialAPICall(task, group) = Total number of API calls made by group on task / Number of participants in group
-
-SuccessRate(task, group) = Number of participants that correctly completed task / Number of participants in group
 
 Even though we expected G2 to outperform G1, we were surprised to see the difference in effort vs. success of the two groups. In Figure \ref{graph:productivity} and \ref{graph:time} we see that, for the simpler tasks, T2 and T3, G1 required more time and more trial API calls and reached successful answers with a lower percentage compared to G2. For T4, where the participants are required to inspect an HTTP response header, G2 needed more API calls on average, but also yielded 24\% higher success rate. For the more complex tasks T5 and T6, we see that participants in G1 had very low success rate and very high number of average API trials compared to G2. The data here depicts that without usage examples developers spend more time and require more trial and error attempts yet resulting in lower success rates, and the situation gets worse for relatively complicated tasks.
 
@@ -409,22 +405,22 @@ Based on these results, we recommend REST API developers to study the usability 
 11 of the 16 G1 participants mentioned the lack of examples with HTTP headers, request and response as the primary problem with the API documentation. On the other hand, 7 out of the 10 G2 participants mentioned the examples being helpful from the enhanced documentation. Based on these feedback, we identify usage examples as the most frequent and central topic of interest from our participants. This is also supported by our quantitative analysis results as discussed earlier in this section. REST API developers need to provide usage examples showing sample requests and responses with HTTP headers and body for API actions to help API usability. In the remainder of this section, we provide our observations related to each task and their implications.
 
 
-\textbf{Observation 1.} Without usage examples, we observed 10 of the 16 G1 participants used incorrect data type of $String$ instead of $Integer$. To successfully complete T1, participants had to use an integer ID representing an $Author$ object given the author name. In the original API documentation, the following is mentioned about the author parameter: \textit{``author: Limit result set to posts assigned to specific authors.''} The documentation doesn't mention that the data type required is the numeric author ID, not the author name. P1.12 mentioned the following: \textbf{``...to find posts for the author, I had to inspect the response to see that indeed the $author\_id$ was in there''}. The enhanced documentation showed one example of using numeric ID. 3 of the 10 participants from G2 ran into the same error. When faced with this error, participants used trial and error to eventually complete the task.
+\textbf{Observation: Use of Data Type.} Without usage examples, we observed 10 of the 16 G1 participants used incorrect data type of $String$ instead of $Integer$. To successfully complete T1, participants had to use an integer ID representing an $Author$ object given the author name. In the original API documentation, the following is mentioned about the author parameter: ``author: Limit result set to posts assigned to specific authors.'' The documentation doesn't mention that the data type required is the numeric author ID, not the author name. P1.12 mentioned the following: \textit{``...to find posts for the author, I had to inspect the response to see that indeed the $author\_id$ was in there''}. The enhanced documentation showed one example of using numeric ID. 3 of the 10 participants from G2 ran into the same error. When faced with this error, participants used trial and error to eventually complete the task.
 
 \textbf{Implication 1.} REST API documentation needs to include examples of data types such as Integer, String, and Array for each API field to satisfy API client developer information need.
 
-\textbf{Observation 2.} We observed participants in G1 faced obstacles using correct data formats for Date and Array type data in API requests without usage examples. Tasks T3 required the use of a correct format to represent an array of numeric post IDs to be excluded using the API. The original documentation mentions the following about this API query parameter: \textit{``exclude: Ensure result set excludes specific IDs.''} Participants attempted to solve this task using multiple different formats for specifying the array. For example: they tried with $exclude=[1,4]$, $exclude=1\&4$, $exclude=4\&\&exclude=1$, $id!=1\&id!=4$ and other alternatives before eventually finding the right format as follows $exclude=1,4$. Participant P1.6 mentioned the following: \textbf{``It was difficult to figure out whether some of the inputs needed to be arrays or just a comma-separated list.''}. 7 out of the 16 participants in G1 faced this error. The enhanced documentation showed one example of using multiple IDs and all G2 participants could use the right format.
+\textbf{Observation: Use of Data Format.} We observed participants in G1 faced obstacles using correct data formats for Date and Array type data in API requests without usage examples. Tasks T3 required the use of a correct format to represent an array of numeric post IDs to be excluded using the API. The original documentation mentions the following about this API query parameter: ``exclude: Ensure result set excludes specific IDs.'' Participants attempted to solve this task using multiple different formats for specifying the array. For example: they tried with $exclude=[1,4]$, $exclude=1\&4$, $exclude=4\&\&exclude=1$, $id!=1\&id!=4$ and other alternatives before eventually finding the right format as follows $exclude=1,4$. Participant P1.6 mentioned the following: \textit{``It was difficult to figure out whether some of the inputs needed to be arrays or just a comma-separated list.''}. 7 out of the 16 participants in G1 faced this error. The enhanced documentation showed one example of using multiple IDs and all G2 participants could use the right format.
 
-Task T5 also required the participants to use an ISO8601 formatted date for publishing a post with a specific date. Even though the original documentation mentions ISO8601 format, it doesn't provide an example. Instead of using ``2016-01-01T00:00:00-00:00'', participants from G1 used date formats as follows: ``January 1, 2016'', ``2016-01-01T12:00:00'', ``20160101'', etc. P1.8 mentioned the following: \textbf{``Got hung up trying to figure out the formatting of the date (which doesn't appear to be ISO8601, despite what it says)''}. After analyzing the response, we found that P1.8 used the ISO8601 formatted date in the API calls, but didn't provide the $second$ portion of the time as required by the API. 8 of the 16 participants in G1 had an error in the date formats. With an example, 1 of the 10 participants had the same error from G2.
+Task T5 also required the participants to use an ISO8601 formatted date for publishing a post with a specific date. Even though the original documentation mentions ISO8601 format, it doesn't provide an example. Instead of using ``2016-01-01T00:00:00-00:00'', participants from G1 used date formats as follows: ``January 1, 2016'', ``2016-01-01T12:00:00'', ``20160101'', etc. P1.8 mentioned the following: \textit{``Got hung up trying to figure out the formatting of the date (which doesn't appear to be ISO8601, despite what it says)''}. After analyzing the response, we found that P1.8 used the ISO8601 formatted date in the API calls, but didn't provide the $second$ portion of the time as required by the API. 8 of the 16 participants in G1 had an error in the date formats. With an example, 1 of the 10 participants had the same error from G2.
 
 \textbf{Implication 2.} REST API developers need to include examples showing the valid data format for the API elements.
 
 
-\textbf{Observation 3.} We were surprised to see that 14 of the 15 G1 participants that tried T5 and T6 faced problem using correct request headers without usage examples. Tasks T5 and T6 required the use of a HTTP request header named $Content-Type$. In the original API documentation, the following was mentioned: \textit{``The API uses JSON exclusively as the request and response format, including error responses.''}. Experienced software engineers still had problem using this HTTP header as we found from the participants in G1. P1.12 mentioned the following: \textbf{``I didn't know how to specify application/json so that I could send POST data via the body instead in the URL parameters... Examples would really help - with a sample request and a sample response.''}  Even though G1 participants have years of experience with REST APIs, only one of them could use the $Content-Type$ header correctly without example. In contrast, 2 out of the 10 participants from G2 failed used this header correctly as indicated in the example in the enhanced documentation. Moreover, 1 of the 2 G2 participants that didn't use the header first time, later used it correctly on a subsequent attempt.
+\textbf{Observation: Use of Request Headers.} We were surprised to see that 14 of the 15 G1 participants that tried T5 and T6 faced problem using correct request headers without usage examples. Tasks T5 and T6 required the use of a HTTP request header named $Content-Type$. In the original API documentation, the following was mentioned: ``The API uses JSON exclusively as the request and response format, including error responses.''. Experienced software engineers still had problem using this HTTP header as we found from the participants in G1. P1.12 mentioned the following: \textit{``I didn't know how to specify application/json so that I could send POST data via the body instead in the URL parameters... Examples would really help - with a sample request and a sample response.''}  Even though G1 participants have years of experience with REST APIs, only one of them could use the $Content-Type$ header correctly without example. In contrast, 2 out of the 10 participants from G2 failed used this header correctly as indicated in the example in the enhanced documentation. Moreover, 1 of the 2 G2 participants that didn't use the header first time, later used it correctly on a subsequent attempt.
 
 \textbf{Implication 3.} If API requests need to use HTTP Request headers, in addition to the request method and body, REST API develpers need to include examples of the HTTP headers.
 
-\textbf{Observation 4.} We observed the G1 participants had problem completing API tasks that require multiple API calls without usage examples. Tasks T2 and T6 required the use of multiple API calls to complete successfully. Both tasks require an initial API call to find data using the API that is needed make a second API call. For example, P1.5 mentioned the following about T6, \textbf{``The post I created is not visible and not editable, though I got 201. Not sure why''}. After analyzing the response, we observed that P1.5 was able to create a blog post, but failed to publish it because it didn't have the $publish$ status. As a result, the post was not returned via the API for T6. P2.2 mentioned the following about T2: \textbf{``In case of search posts by author, it's not clear how to find the author\_id. Although, I realized that users and authors are same in this case.''}
+\textbf{Observation: Use of Interdependent API Calls.} We observed the G1 participants had problem completing API tasks that require multiple API calls without usage examples. Tasks T2 and T6 required the use of multiple API calls to complete successfully. Both tasks require an initial API call to find data using the API that is needed make a second API call. For example, P1.5 mentioned the following about T6, \textit{``The post I created is not visible and not editable, though I got 201. Not sure why''}. After analyzing the response, we observed that P1.5 was able to create a blog post, but failed to publish it because it didn't have the $publish$ status. As a result, the post was not returned via the API for T6. P2.2 mentioned the following about T2: \textit{``In case of search posts by author, it's not clear how to find the author\_id. Although, I realized that users and authors are same in this case.''}
 
 \textbf{Implication 4.} If there are prerequisites for making an API call, REST API developers need to provide examples showing how to get the prerequisites in the API documentation.
 
