remove authors for double-blind

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -19,26 +19,26 @@
 \begin{document}
 \title{A Study of the Effectiveness of Usage Examples in REST API Documentation}
 
-\author{\IEEEauthorblockN{S M Sohan, Frank Maurer\IEEEauthorrefmark{1}}
-\IEEEauthorblockA{\IEEEauthorrefmark{1}
-Dept. of Computer Science\\
-University of Calgary\\
-Canada\\
-\{smsohan, frank.maurer\}@ucalgary.ca}
-\and
-\IEEEauthorblockN{Craig Anslow}
-\IEEEauthorblockA{School of Eng. and Computer Science\\
-Victoria University of Wellington\\
-New Zealand\\
-craig@ecs.vuw.ac.nz}
-\and
-\IEEEauthorblockN{Martin Robillard}
-\IEEEauthorblockA{
-School of Computer Science\\
-McGill University\\
-Canada\\
-martin@cs.mcgill.ca}
-}
+% \author{\IEEEauthorblockN{S M Sohan, Frank Maurer\IEEEauthorrefmark{1}}
+% \IEEEauthorblockA{\IEEEauthorrefmark{1}
+% Dept. of Computer Science\\
+% University of Calgary\\
+% Canada\\
+% \{smsohan, frank.maurer\}@ucalgary.ca}
+% \and
+% \IEEEauthorblockN{Craig Anslow}
+% \IEEEauthorblockA{School of Eng. and Computer Science\\
+% Victoria University of Wellington\\
+% New Zealand\\
+% craig@ecs.vuw.ac.nz}
+% \and
+% \IEEEauthorblockN{Martin Robillard}
+% \IEEEauthorblockA{
+% School of Computer Science\\
+% McGill University\\
+% Canada\\
+% martin@cs.mcgill.ca}
+% }
 
 \maketitle
 
